--- a/index.html
+++ b/index.html
@@ -21,6 +21,41 @@
             max-width: 80%;
             margin-bottom: 20px;
         }
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            padding: 40px 20px;
+        }
+        .product {
+            background: #fff;
+            border-radius: 10px;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+            width: 280px;
+            padding: 20px;
+        }
+        .product img {
+            width: 100%;
+            border-radius: 8px;
+        }
+        .product h3 {
+            margin: 10px 0 5px;
+        }
+        .product p {
+            font-size: 14px;
+            color: #555;
+        }
+        .shop-button {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 10px 20px;
+            background-color: #F5C24C;
+            color: #3C3C3C;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+        }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&display=swap" rel="stylesheet">
 </head>
@@ -29,6 +64,21 @@
         <img src="logo.png" alt="Kiiro no Mori Logo" class="logo-img">
         <h2>Japanese-inspired Woodcraft Studio</h2>
         <p>Minimalist. Mindful. Handcrafted in Thailand.</p>
+    </div>
+
+    <div class="gallery">
+        <div class="product">
+            <img src="https://via.placeholder.com/280x180?text=Phone+Stand" alt="Phone Stand">
+            <h3>Phone Stand</h3>
+            <p>Made from reclaimed pine. Custom engravings available.</p>
+            <a href="https://shopee.co.th/" target="_blank" class="shop-button">Shop on Shopee</a>
+        </div>
+        <div class="product">
+            <img src="https://via.placeholder.com/280x180?text=Pencil+Holder" alt="Pencil Holder">
+            <h3>Pencil Holder</h3>
+            <p>Minimalist design to organize your desk beautifully.</p>
+            <a href="https://shopee.co.th/" target="_blank" class="shop-button">Shop on Shopee</a>
+        </div>
     </div>
 </body>
 </html>
