--- a/index.html
+++ b/index.html
@@ -17,10 +17,24 @@
             align-items: center;
             justify-content: space-between;
             background-color: #F5C24C;
-            padding: 10px 20px;
+            padding: 10px 30px;
+        }
+        .navbar-left {
+            display: flex;
+            align-items: center;
         }
         .navbar img {
-            height: 50px;
+            height: 70px;
+            margin-right: 20px;
+        }
+        .navbar a {
+            margin-left: 15px;
+            color: #3C3C3C;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .navbar a:hover {
+            text-decoration: underline;
         }
         .hero {
             text-align: center;
@@ -92,20 +106,28 @@
 </head>
 <body>
     <div class="navbar">
-        <img src="logo.png" alt="Kiiro no Mori Logo">
+        <div class="navbar-left">
+            <img src="logo.png" alt="Kiiro no Mori Logo">
+            <nav>
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#products">Products</a>
+                <a href="#contact">Contact</a>
+            </nav>
+        </div>
     </div>
 
-    <div class="hero">
+    <div class="hero" id="home">
         <h2>Japanese-inspired Woodcraft Studio</h2>
         <p>Minimalist. Mindful. Handcrafted in Thailand.</p>
     </div>
 
-    <section class="about">
+    <section class="about" id="about">
         <h2>About Us</h2>
         <p>Kiiro no Mori (黄色の森) creates handcrafted wooden objects from reclaimed pine—designed for peaceful, modern living spaces.</p>
     </section>
 
-    <section class="gallery">
+    <section class="gallery" id="products">
         <h2>Our Products</h2>
         <div class="products">
             <div class="product">
@@ -123,7 +145,7 @@
         </div>
     </section>
 
-    <footer>
+    <footer id="contact">
         © 2025 Kiiro no Mori. Crafted with care in Thailand.  
         <br>
         Follow us: IG @kiironomori
